Projet GL/test/src/test/deca/syntax/invalid/missing_semi.res
src/test/deca/syntax/invalid/missing_semi.deca:12:0: missing ';' at '}'
